app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade:wght@400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Aldrich&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Jersey+15&display=swap");

@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

/* attempt to modify caret size */
.custom-arrow .collapse-title::before {
	font-size: 4rem; /* Adjust as needed */
}

.pixel-glow-hover {
	transition:
		background-color 0.5s ease,
		box-shadow 0.5s ease;
}

.pixel-glow-hover:hover {
	background-color: #410091;
	box-shadow:
		0 0 2px #fff,
		0 0 6px #ff00ff,
		0 0 10px #ff00ff,
		0 0 14px #ffc400,
		0 0 20px #ffc400;
}
:root,
[data-amplify-theme] {
	--amplify-colors-background-primary: #080a0b;
	--amplify-components-field-label-color: #efefef;
	--amplify-components-button-primary-background-color: #74b7ef;
	--amplify-components-button-primary-color: #213445;
	--amplify-components-button-primary-hover-background-color: #4a6277;
	--amplify-components-button-link-color: #efefef;
	--amplify-components-button-link-hover-color: #74b7ef;
	--amplify-components-button-link-hover-background-color: #213445;
	--amplify-components-heading-color: #efefef;
	--amplify-components-input-color: #efefef;
	--amplify-components-radio-label-color: #efefef;
}

